# Email-Client-with-SMTP-IMAP

./: README.md
rust_project/: Cargo.toml  emails.json
