[package]
name = "rust_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imap = "2.4.1"
lettre = "0.11.0"
lettre_email = "0.9.4"
maybe-string = "0.1.0"
native-tls = "0.2.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"

